--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    
+    <canvas id="main-canvas"></canvas>
     
     <script src="./build/js/app.js"></script>
 </body>
